scripts/nullaway/original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8.txt
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:42: error: [NullAway] dereferenced expression conn is @Nullable
            conn.StopReceiveThread();
                ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:52: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:62: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:74: error: [NullAway] dereferenced expression conn is @Nullable
        return conn.Receive(0 /*no blocking*/ );
                   ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:23: error: [NullAway] initializer method does not guarantee @NonNull fields m_peerAddress (line 61), m_receiverThread (line 78), m_recvSocket (line 79) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public UdpConnector( 
           ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:37: error: [NullAway] initializer method does not guarantee @NonNull fields m_peerAddress (line 61), m_receiverThread (line 78), m_recvSocket (line 79) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public UdpConnector( 
           ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:34: error: [NullAway] assigning @Nullable expression to @NonNull field
        m_receiverThread = null;
                         ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:50: error: [NullAway] assigning @Nullable expression to @NonNull field
        m_receiverThread = null;
                         ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:161: error: [NullAway] assigning @Nullable expression to @NonNull field
                UdpConnector.this.m_receiverThread = null; // 
                                                   ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/DtcpPacket.java:54: error: [NullAway] initializer method does not guarantee @NonNull field payload (line 47) is initialized along all control-flow paths (remember to check for exceptions or early returns).
        public DtcpPacket (){}
               ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/DtcpPacket.java:86: error: [NullAway] initializer method does not guarantee @NonNull field payload (line 47) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DtcpPacket (short destAddr, short srcAddr, short destCEPid, short srcCEPid, byte pdu_type)
	       ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:87: error: [NullAway] initializer method does not guarantee @NonNull field m_bufferToSend (line 84) is initialized along all control-flow paths (remember to check for exceptions or early returns).
        ShapedSendTask(String stringToSend)
        ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:92: error: [NullAway] initializer method does not guarantee @NonNull field m_stringToSend (line 83) is initialized along all control-flow paths (remember to check for exceptions or early returns).
        ShapedSendTask(byte[] bufferToSend)
        ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:55: error: [NullAway] dereferenced expression conn is @Nullable
            conn.StopReceiveThread();
                ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:65: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:76: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:88: error: [NullAway] dereferenced expression conn is @Nullable
        return conn.Receive(maxBlockTimeInMs /*no blocking*/ );
                   ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:235: error: [NullAway] initializer method does not guarantee @NonNull field m_selfCancelHandle (line 240) is initialized along all control-flow paths (remember to check for exceptions or early returns).
        RetransmitEvent(DtcpPacket packetToTransmit)
        ^
    (see http://t.uber.com/nullaway )
../original/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:427: error: [NullAway] dereferenced expression task is @Nullable
                task.cancel(false);
                    ^
    (see http://t.uber.com/nullaway )
19 errors
